--- a/src/app/index.html
+++ b/src/app/index.html
@@ -73,7 +73,7 @@
     <header class="header">
       <div class="header-content">
         <div class="profile-photo">
-          <img src="assets/images/profile.jpg" alt="Foto de perfil" />
+          <img src="../assets/images/profile.jpg" alt="Foto de perfil" />
         </div>
         <div class="intro">
           <h1>¡Hola!<br />mi nombre es</h1>
