--- a/src/app/app.html
+++ b/src/app/app.html
@@ -533,6 +533,6 @@
       </div>
     </footer>
 
-    <script type="module" src="./script.js"></script>
+    <script type="module" src="../app/app.js"></script>
   </body>
 </html>
